create new entry function

--- a/src/app/components/cottage-list/cottage-list.component.html
+++ b/src/app/components/cottage-list/cottage-list.component.html
@@ -35,6 +35,8 @@
                 </td>
               </tr>
             }
+          } @else {
+            <td class="border text-center" colspan="12">Table is empty</td>
           }
         }
       </tbody>
