--- a/src/app/components/customers-list/customers-list.component.html
+++ b/src/app/components/customers-list/customers-list.component.html
@@ -1,6 +1,6 @@
 
 <div class="overflow-x-auto">
-  <table class="table overflow-y-scroll">
+  <table class="table table-sm table-pin-rows">
     <!-- head -->
     <thead>
       <tr>
@@ -38,7 +38,7 @@
             </tr>
           }
         } @else {
-          <td class="border text-center" colspan="4">Table is empty</td>
+          <td class="border text-center" colspan="12">Table is empty</td>
         }
       }
     </tbody>
