--- a/src/app/pages/reservations/reservations.component.html
+++ b/src/app/pages/reservations/reservations.component.html
@@ -42,7 +42,7 @@
                 <tr>
                   <th class="text-[1rem] text-gray-600 bg-[#99ebff] border text-center capitalize w-2/12 font-medium">name</th>
                   <th class="text-[1rem] text-gray-600 bg-[#99ebff] border text-center capitalize w-1/12 font-medium">contact no.</th>
-                  <th class="text-[1rem] text-gray-600 bg-[#99ebff] border text-center capitalize w-1/12 font-medium">cottage no.</th>
+                  <th class="text-[1rem] text-gray-600 bg-[#99ebff] border text-center capitalize w-1/12 font-medium">cottages</th>
                   <th class="text-[1rem] text-gray-600 bg-[#99ebff] border text-center capitalize w-1/12 font-medium">payment</th>
                   <th class="text-[1rem] text-gray-600 bg-[#99ebff] border text-center capitalize w-1/12 font-medium">reserved date</th>
                   <th class="text-[1rem] text-gray-600 bg-[#99ebff] border text-center capitalize w-1/12 font-medium">remarks</th>
@@ -59,12 +59,15 @@
                   <td class="border text-center">5000</td>
                   <td class="border text-center">10:00 am</td>
                   <td class="border text-center">
-                    <button class="btn btn-sm bg-blue-500 text-[#fff] hover:bg-blue-700">
+                    <button class="btn btn-sm bg-primary text-[#fff] hover:bg-blue-700">
                         <mat-icon>edit</mat-icon>
                     </button>
-                    <button class="btn btn-sm bg-red-500 text-[#fff] hover:bg-red-600">
-                        <mat-icon>delete</mat-icon>
+                    <button class="btn btn-sm bg-success text-[#fff] hover:bg-red-600">
+                        <mat-icon>visibility</mat-icon>
                     </button>
+                    <button class="btn btn-sm bg-error text-[#fff] hover:bg-red-600">
+                      <mat-icon>delete</mat-icon>
+                  </button>
                   </td>
                 </tr>
                 <tr>
@@ -75,12 +78,15 @@
                   <td class="border text-center">5000</td>
                   <td class="border text-center">10:00 am</td>
                   <td class="border text-center">
-                    <button class="btn btn-sm bg-blue-500 text-[#fff] hover:bg-blue-700">
-                        <mat-icon>edit</mat-icon>
+                    <button class="btn btn-sm bg-primary text-[#fff] hover:bg-blue-700">
+                      <mat-icon>edit</mat-icon>
                     </button>
-                    <button class="btn btn-sm bg-red-500 text-[#fff] hover:bg-red-600">
-                        <mat-icon>delete</mat-icon>
+                    <button class="btn btn-sm bg-success text-[#fff] hover:bg-red-600">
+                        <mat-icon>visibility</mat-icon>
                     </button>
+                    <button class="btn btn-sm bg-error text-[#fff] hover:bg-red-600">
+                      <mat-icon>delete</mat-icon>
+                  </button>
                   </td>
                 </tr>
                 <tr>
@@ -91,11 +97,14 @@
                   <td class="border text-center">5000</td>
                   <td class="border text-center">10:00 am</td>
                   <td class="border text-center">
-                    <button class="btn btn-sm bg-blue-500 text-[#fff] hover:bg-blue-700">
-                        <mat-icon>edit</mat-icon>
+                    <button class="btn btn-sm bg-primary text-[#fff] hover:bg-blue-700">
+                      <mat-icon>edit</mat-icon>
                     </button>
-                    <button class="btn btn-sm bg-red-500 text-[#fff] hover:bg-red-600">
-                        <mat-icon>delete</mat-icon>
+                    <button class="btn btn-sm bg-success text-[#fff] hover:bg-red-600">
+                        <mat-icon>visibility</mat-icon>
+                    </button>
+                    <button class="btn btn-sm bg-error text-[#fff] hover:bg-red-600">
+                      <mat-icon>delete</mat-icon>
                     </button>
                   </td>
                 </tr>
