--- a/src/app/components/add-entrance-modal/add-entrance-modal.component.html
+++ b/src/app/components/add-entrance-modal/add-entrance-modal.component.html
@@ -1,22 +1,11 @@
-<button class="btn btn-sm btn-success font-medium capitalize text-[#fff]" (click)="openModal()">
-    <mat-icon>add</mat-icon>
-    <span>add new entry</span>
-</button>
-
-@if (isSuccess) {
-    <app-success-alert [successMsg]="msg"/>
-}
-
-
-
-<div #entranceModal [ngClass]="" class="fixed inset-0 bg-[#000] bg-opacity-50 z-50 flex justify-center items-center">
-    <div class="w-150 bg-[#fff] relative my-10 rounded-md overflow-auto">
+<div #addEntranceModal class="fixed inset-0 bg-[#000] bg-opacity-50 z-50 flex justify-center items-center">
+    <div class="w-150 bg-[#fff] relative mt-10 rounded-md">
         <div class="flex items-center justify-center p-5 border-b">
-            <span class="text-2xl font-medium">Add new entry</span>
-            <button class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2" (click)="closeModal()">✕</button>
+            <span class="text-2xl font-medium">Update cottage</span>
+            <button class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2" (click)="closeAddEntranceModal()">✕</button>
         </div>
         <div class="py-5 px-7">
-            <form method="dialog" class="px-3 pb-3" [formGroup]="entranceForm" (ngSubmit)="onSubmitCreateEntrance()">
+            <form method="dialog" class="px-3 pb-3" [formGroup]="addEntranceForm">
                 <div class="grid grid-cols-12 gap-8">
                     <div class="col-span-9 grid grid-cols-12 gap-y-5 gap-x-8">
                         <div class="col-span-12">
@@ -29,7 +18,7 @@
                             <div class="text-center w-full pb-2">
                                 <span class="text-lg font-medium">Customers</span>
                             </div>
-                            <div formArrayName="cc">
+                           <div formArrayName="cc">
                                 <div *ngFor="let c of cc.controls; let i = index" [formGroupName]="i">
                                     <div class="mb-3 flex space-x-4">
                                         <div>
@@ -91,7 +80,7 @@
                             <div class="">
                                 <label for="total" class="capitalize font-medium">total</label>
                                 <div class="flex">
-                                    <input type="text" formControlName="total" id="total" value="0" min="0" readonly class="input input-bordered input-info rounded-none w-full text-right">
+                                    <input type="text" formControlName="total" id="total" min="0" readonly class="input input-bordered input-info rounded-none w-full text-right">
                                 </div>
                             </div>
                             <div class="">
@@ -106,15 +95,9 @@
                                     <input type="text" formControlName="change" id="change" min="0" readonly class="input input-bordered input-info rounded-none w-full text-right">
                                 </div>
                             </div>
-                            <button type="button" class="btn btn-error text-[#fff] capitalize w-full font-medium rounded-none" (click)="calculateChange()">
-                                @if (isCalculateChangeLoading) {
-                                    <app-loader/>
-                                } @else {
-                                    calculate
-                                }
-                            </button>
-                            <button type="submit" class="btn btn-success text-[#fff] capitalize w-full font-medium rounded-none" [disabled]="!entranceForm.valid">
-                                @if (isLoading) {
+                            <button type="button" class="btn btn-error text-[#fff] capitalize w-full font-medium rounded-none" (click)="calculateChange()">calculate</button>
+                            <button type="submit" class="btn btn-success text-[#fff] capitalize w-full font-medium rounded-none" (click)="onSubmitAddEntrance()">
+                                @if (isSaveLoading) {
                                     <app-loader/>
                                 } @else {
                                     save
