--- a/src/app/components/entrance-list/entrance-list.component.html
+++ b/src/app/components/entrance-list/entrance-list.component.html
@@ -1,41 +1,77 @@
-<div class="overflow-x-auto">
+<div class="">
     <table class="table table-sm table-pin-cols">
       <!-- head -->
       <thead>
         <tr>
-          <th class="text-[1rem] text-gray-600 bg-[#99ebff] border text-center capitalize w-3/12 font-medium">name</th>
-          <th class="text-[1rem] text-gray-600 bg-[#99ebff] border text-center capitalize w-1/12 font-medium">no of cottage</th>
-          <th class="text-[1rem] text-gray-600 bg-[#99ebff] border text-center capitalize w-1/12 font-medium">adults</th>
-          <th class="text-[1rem] text-gray-600 bg-[#99ebff] border text-center capitalize w-1/12 font-medium">kids</th>
-          <th class="text-[1rem] text-gray-600 bg-[#99ebff] border text-center capitalize w-1/12 font-medium">senior</th>
+          <th class="text-[1rem] text-gray-600 bg-[#99ebff] border text-center capitalize w-2/12 font-medium">name</th>
+          <th class="text-[1rem] text-gray-600 bg-[#99ebff] border text-center capitalize w-1/12 font-medium">cottage</th>
+          <th class="text-[1rem] text-gray-600 bg-[#99ebff] border text-center capitalize w-2/12 font-medium">customers</th>
           <th class="text-[1rem] text-gray-600 bg-[#99ebff] border text-center capitalize w-1/12 font-medium">total</th>
-          <th class="text-[1rem] text-gray-600 bg-[#99ebff] border text-center capitalize w-1/12 font-medium">time of entry</th>
-          <th class="text-[1rem] text-gray-600 bg-[#99ebff] border text-center capitalize w-2/12 font-medium">actions</th>
+          <th class="text-[1rem] text-gray-600 bg-[#99ebff] border text-center capitalize w-3/12 font-medium">time of entry</th>
+          <th class="text-[1rem] text-gray-600 bg-[#99ebff] border text-center capitalize w-3/12 font-medium">actions</th>
         </tr>
       </thead>
-      <tbody>
-        @for (entrance of entranceList; track $index) {
-          <tr>
-            <td class="border text-center">{{ entrance.name }}</td>
-            <td class="border text-center">1</td>
-            <td class="border text-center">23</td>
-            <td class="border text-center">10</td>
-            <td class="border text-center">5</td>
-            <td class="border text-center">{{ entrance.total }}</td>
-            <td class="border text-center">10:00 am</td>
-            <td class="border text-center">
-              <button class="btn btn-sm bg-primary text-[#fff]">
-                  <mat-icon>edit</mat-icon>
-              </button>
-              <button class="btn btn-sm bg-error text-[#fff]">
-                  <mat-icon>delete</mat-icon>
-              </button>
-              <button class="btn btn-sm bg-success text-[#fff]">
-                <mat-icon>add</mat-icon>
-            </button>
-            </td>
-          </tr>
+      <tbody class="border border-red-500">
+        @if (isLoading) {
+          <td class="border text-center" colspan="12">
+            <div class="flex items-center justify-center space-x-2">
+              <app-loader/>
+              <span>Loading entrance</span>
+            </div>
+          </td>
+        } @else {
+          @for (entrance of entranceList; track $index) {
+            <tr>
+              <td class="border text-center">{{ entrance.name }}</td>
+              <td class="border text-center">
+                <ul>
+                  @for (bc of entrance.booked_cottages; track $index) {
+                    <li class="flex justify-start items-center px-10">
+                      <span class="capitalize w-16 text-start">{{ bc.cottage.type }}:</span>
+                      <span> {{ bc.quantity }}</span>
+                    </li>
+                  }
+                </ul>
+              </td>
+              <td class="border text-center">
+                <ul>
+                  @for (cc of entrance.customers_count; track $index) {
+                    <li class="flex justify-start items-center px-10">
+                      <span class="capitalize w-16 text-start">{{ cc.customer.type }}:</span>
+                      <span> {{ cc.count }}</span>
+                    </li>
+                  }
+                </ul>
+              </td>
+              <td class="border text-center">{{ entrance.total }}</td>
+              <td class="border text-center">{{ entrance.created_at | date:'medium' }}</td>
+              <td class="border text-center">
+                <button class="btn btn-sm bg-success text-[#fff]" (click)="openAddEntranceModal(entrance)">
+                  <mat-icon>add</mat-icon>
+                </button>
+                <button class="btn btn-sm bg-primary text-[#fff]">
+                    <mat-icon>edit</mat-icon>
+                </button>
+                <button class="btn btn-sm bg-error text-[#fff]">
+                    <mat-icon>delete</mat-icon>
+                </button>
+              </td>
+            </tr>
+          }
         }
       </tbody>
     </table>
+    <div class="flex justify-end items-center p-4 space-x-2">
+      <div>
+        <small class="font-medium">Page {{currentPage}} of {{totalPages}}</small>
+      </div>
+      <button class="font-medium border px-2 py-1 hover:bg-gray-100" *ngIf="currentPage > 1" (click)="previousPage()">
+        <span class="capitalize">previous</span>
+      </button>
+      <button class="font-medium border px-2 py-1 hover:bg-gray-100" *ngIf="currentPage < totalPages" (click)="nextPage()">
+        <span class="capitalize">next</span>
+      </button>
+    </div>
   </div>
+
+  <app-add-entrance-modal #openAddEntranceModalForm/>
